--- a/src/app/navigation/tool-bar/ToolBar.scss
+++ b/src/app/navigation/tool-bar/ToolBar.scss
@@ -6,8 +6,7 @@
     height: 60px;
     left: 0;
     align-items: center;
-    background-color: #fff;
+    background-color: #3F51B5;
     box-shadow: 2px 4px 3px rgba(0, 0, 0, 0.2);
     z-index: 4;
-    // background-color: #3f51b5;
 }
