--- a/src/app/shared/buttons/icon-button/IconButton.scss
+++ b/src/app/shared/buttons/icon-button/IconButton.scss
@@ -6,8 +6,6 @@
     padding: 0 15px;
     margin: 0 5px;
     box-sizing: border-box;
-    width: 30px;
-    height: 30px;
     border-radius: 2px;
     box-shadow: 1px 3px 8px -2px rgba(0, 0, 0, 0.2), 0px 2px 5px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.2s ease;
@@ -20,7 +18,6 @@
 
     i {
         pointer-events: none;
-        font-size: 1.5em;
     }
 
 }
@@ -57,15 +54,33 @@
 .rounded-icon-button {
     border-radius: 100%;
     transform-origin: 50% 50%;
-    transform: scale(1.1, 1.1);
 }
 
 .rounded-icon-button--large {
-    transform: scale(1.5, 1.5);
+    width: 50px;
+    height: 50px;
+
+    i {
+        font-size: 2.2em;
+    }
+}
+
+.rounded-icon-button--normal {
+    width: 40px;
+    height: 40px;
+
+    i {
+        font-size: 2em;
+    }
 }
 
 .rounded-icon-button--small {
-    transform: scale(0.85, 0.85);
+    width: 30px;
+    height: 30px;
+
+    i {
+        font-size: 1.5em;
+    }
 }
 
 .icon-button__label {
