--- a/src/app/shared/form/select/OptionList.scss
+++ b/src/app/shared/form/select/OptionList.scss
@@ -1,7 +1,7 @@
 .option-list {
     overflow: hidden auto;
     min-width: 200px;
-    padding: 5px 0;
+    padding: 15px 0 0 0;
     margin: 0;
 
     &:empty {
