Extract the options for component menus in topology renderer into states instead of inlining them

--- a/src/app/topology-renderer/views/capacitor-menu/CapacitorMenu.scss
+++ b/src/app/topology-renderer/views/capacitor-menu/CapacitorMenu.scss
@@ -1,10 +1,10 @@
 .capacitor-menu {
-    .gridappsd-form-control {
+    .form-control {
         margin: 10px;
         font-size: 0.8em;
     }
 
-    .gridappsd-form-control__label {
+    .form-control__label {
         width: 7em;
     }
 
