--- a/src/app/topology-renderer/views/regulator-menu/RegulatorMenu.scss
+++ b/src/app/topology-renderer/views/regulator-menu/RegulatorMenu.scss
@@ -1,10 +1,10 @@
 .regulator-menu {
-    .gridappsd-form-control {
+    .form-control {
         margin: 10px;
         font-size: 0.8em;
     }
 
-    .gridappsd-form-control__label {
+    .form-control__label {
         width: 8em;
     }
 
