--- a/src/app/topology-renderer/views/switch-menu/SwitchMenu.scss
+++ b/src/app/topology-renderer/views/switch-menu/SwitchMenu.scss
@@ -1,11 +1,11 @@
 .switch-menu {
-    .gridappsd-form-control {
+    .form-control {
         margin: 10px;
         font-size: 0.8em;
     }
 
-    .gridappsd-form-control__label {
-        width: 8em;
+    .form-control__label {
+        width: 70px;
     }
 
     .dialog-content {
