--- a/src/app/simulation/simulation-status-logger/SimulationStatusLog.scss
+++ b/src/app/simulation/simulation-status-logger/SimulationStatusLog.scss
@@ -72,7 +72,7 @@
 .simulation-status-logger__content {
     max-height: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow: hidden auto;
     white-space: pre;
     background-color: #fff8f8;
 }
