--- a/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/OutageEventSummaryTable.scss
+++ b/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/OutageEventSummaryTable.scss
@@ -8,7 +8,7 @@
 
 .outage-event-summary-table {
     border-collapse: collapse;
-
+    width: 100%;
     th,
     td,
     div {
@@ -17,26 +17,26 @@
     }
 
     thead {
-        background-color: #ff4081;
+        background-color: #3f51b5;
         color: #fff;
-        border: 2px solid #db356e;
+        border: 2px solid #CECECE;
     }
 
     th {
         font-weight: 500;
         padding: 5px 10px;
-        border: 2px solid #db356e;
+        border: 2px solid #CECECE;
     }
 
     td {
-        border: 2px solid #db356e;
+        border: 2px solid #CECECE;
         padding: 0;
 
         &>div {
             padding: 5px 10px;
 
             &:not(:last-of-type) {
-                border-bottom: 2px solid #db356e;
+                border-bottom: 2px solid #CECECE;
             }
         }
     }
