Validate that new fault event id is unique

--- a/src/app/shared/form/radio/RadioButtonGroup.scss
+++ b/src/app/shared/form/radio/RadioButtonGroup.scss
@@ -6,6 +6,8 @@
 
 .radio-button-group.style-switches {
     justify-content: center;
+    align-items: center;
+
     flex-flow: column nowrap;
     margin: 0;
 
