--- a/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/FaultEventSummaryTable.scss
+++ b/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/FaultEventSummaryTable.scss
@@ -34,7 +34,7 @@
         padding: 0;
 
         &>div {
-            padding: 5px 10px;
+            padding: 5px;
 
             &:not(:last-of-type) {
                 border-bottom: 2px solid #CECECE;
