--- a/src/app/navigation/drawer/DrawerItemGroup.scss
+++ b/src/app/navigation/drawer/DrawerItemGroup.scss
@@ -1,5 +1,9 @@
 .drawer-item-group {
     max-height: 50px;
+
+    .drawer-item-wrapper {
+        pointer-events: none;
+    }
 }
 
 .drawer-item-group__nested-drawer-items:not(:empty) {
