--- a/src/app/shared/tabs/TabGroup.scss
+++ b/src/app/shared/tabs/TabGroup.scss
@@ -34,11 +34,12 @@
 
 .tabgroup__body {
     border: 2px solid rgba(64, 81, 181, 0.502);
-    width: 100%;
-    height: calc(100% - 45px);
+    width: calc(100% - 2px);
+    height: calc(100% - 47px);
     overflow: hidden;
     box-sizing: border-box;
     border-radius: 5px;
+    margin: 0 1px
 }
 
 .tabgroup__body__wrapper {
@@ -63,4 +64,25 @@
     position: relative;
     box-sizing: border-box;
     flex-shrink: 0;
+}
+
+.tabgroup__active-tab-indicator {
+    position: absolute;
+    border: 2px solid rgba(64, 81, 181, 0.502);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom: 0;
+    height: 100%;
+    transition: transform 0.5s cubic-bezier(0.35, 0, 0.25, 1), width 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+    left: 0;
+
+    &::after {
+        content: '';
+        display: inline-block;
+        position: absolute;
+        width: 100%;
+        height: 5px;
+        background-color: #fff;
+        top: 95%;
+    }
 }
