--- a/src/app/simulation/simulation-control/SimulationControl.scss
+++ b/src/app/simulation/simulation-control/SimulationControl.scss
@@ -29,13 +29,31 @@
     border-top-left-radius: 7px;
 }
 
+.simulation-control__simulation-id__value-wrapper {
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+}
+
+.simulation-control__simulation-id__value__copied-successfully-tooltip {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+}
+
 .simulation-control__simulation-id__value {
+    position: relative;
     display: inline-block;
     padding: 6px 5px;
     border: 2px solid #3660c5;
     border-left: none;
     box-shadow: 0 0 1px #555;
     border-bottom-right-radius: 7px;
+    cursor: pointer;
 }
 
 .simulation-control__action {
