--- a/src/app/shared/test-manager/FaultEventTable.scss
+++ b/src/app/shared/test-manager/FaultEventTable.scss
@@ -1,21 +1,6 @@
-.outage-event-summary-table-wrapper {
-    overflow: auto;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    margin-top: 10px
-}
-
-.outage-event-summary-table {
+.fault-event-table {
     border-collapse: collapse;
     width: 100%;
-
-    th,
-    td,
-    div {
-        font-size: 0.9em;
-        text-align: center;
-    }
 
     thead {
         background-color: #3f51b5;
@@ -24,9 +9,19 @@
     }
 
     th {
+        font-size: 0.8em;
+        text-align: center;
+        white-space: nowrap;
         font-weight: 500;
-        padding: 5px 10px;
+        padding: 10px 15px;
         border: 2px solid #CECECE;
+    }
+
+    td,
+    div {
+        white-space: nowrap;
+        font-size: 0.9em;
+        text-align: center;
     }
 
     td {
@@ -43,7 +38,7 @@
     }
 }
 
-.outage-event-summary-table__row-action {
+.fault-event-table__row-actions {
     display: inline-flex;
     justify-content: center;
 }
