--- a/src/app/simulation/event-summary/EventSummary.scss
+++ b/src/app/simulation/event-summary/EventSummary.scss
@@ -1,7 +1,6 @@
-.fault-event-table-wrapper {
+.event-summary {
     overflow: auto;
     width: 100%;
     max-width: 100%;
     height: 100%;
-    margin-top: 10px
 }
