--- a/src/app/shared/form/input/Input.scss
+++ b/src/app/shared/form/input/Input.scss
@@ -10,6 +10,7 @@
     outline: none;
     padding: 5px;
     box-sizing: border-box;
+    transition: border-bottom-color 0.15s ease, color 0.1s ease;
 }
 
 .input-field__ripple-bar {
@@ -21,10 +22,22 @@
     transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
     transform: scaleX(0);
     background-color: #3f51b5;
+    transition: background-color 0.1s ease;
     transform-origin: 50% 50%;
     display: inline-block;
 }
 
 .input-field__input:focus~.input-field__ripple-bar {
     transform: scaleX(1);
+}
+
+.form-control.invalid {
+    .input-field__input {
+        border-bottom-color: red;
+        color: red;
+    }
+
+    .input-field__ripple-bar {
+        background-color: red;
+    }
 }
