--- a/src/app/shared/form/select/Select.scss
+++ b/src/app/shared/form/select/Select.scss
@@ -7,6 +7,11 @@
     z-index: 24;
 }
 
+.form-control.invalid .select__option-list__opener {
+    color: red;
+}
+
+
 .select__option-list__opener {
     box-shadow: 1px 1px 10px -1px rgba(0, 0, 0, 0.2), 1px 2px 3px rgba(0, 0, 0, 0.1);
     display: flex;
