--- a/src/app/shared/form/validation/validation-error-messages/ValidationErrorMessages.scss
+++ b/src/app/shared/form/validation/validation-error-messages/ValidationErrorMessages.scss
@@ -1,6 +1,10 @@
 .validation-error-message-container {
-    margin: 0px 0 5px 0;
-    padding: 5px 0;
+    margin: 0;
+    padding: 5px 0 0 0;
+
+    &:empty {
+        display: none;
+    }
 }
 
 .validation-error-message {
@@ -8,6 +12,6 @@
     color: red;
     font-style: italic;
     list-style: none;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
