--- a/src/app/shared/form/input/Input.scss
+++ b/src/app/shared/form/input/Input.scss
@@ -19,10 +19,9 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1), background-color 0.1s ease;
     transform: scaleX(0);
     background-color: #3f51b5;
-    transition: background-color 0.1s ease;
     transform-origin: 50% 50%;
     display: inline-block;
 }
