Increase widths of input fields

--- a/src/app/stomp-client/StompClient.scss
+++ b/src/app/stomp-client/StompClient.scss
@@ -7,6 +7,10 @@
     label {
         width: 100px;
     }
+
+    .form-control__body {
+        width: 100%;
+    }
 }
 
 .stomp-client-form__topic .input-field-wrapper {
