Only show a fixed number of log messages at a time, and load more when the scroll bar is at the bottom of the container

--- a/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
+++ b/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
@@ -9,7 +9,9 @@
 
     .simulation-status-logger-message:before {
         counter-increment: message-number;
-        content: counter(message-number) ". "
+        content: counter(message-number) ". ";
+        width: 30px;
+        text-align: right;
     }
 }
 
