Reduce the width of input text component to match that of select component

--- a/src/app/shared/form/input/Input.scss
+++ b/src/app/shared/form/input/Input.scss
@@ -6,7 +6,7 @@
 .input-field__input {
     border: none;
     border-bottom: 2px solid #e3e3e3;
-    min-width: 200px;
+    width: 160px;
     outline: none;
     padding: 5px;
     box-sizing: border-box;
