--- a/src/app/shared/form/select/Select.scss
+++ b/src/app/shared/form/select/Select.scss
@@ -7,6 +7,10 @@
     z-index: 24;
 }
 
+.select.form-control {
+    align-items: center;
+}
+
 .form-control.invalid .select__option-list__opener {
     color: red;
 }
