--- a/src/app/simulation/measurement-chart/MeasurementChart.scss
+++ b/src/app/simulation/measurement-chart/MeasurementChart.scss
@@ -20,6 +20,7 @@ $time-series-colors: red green blue #b729ae orange pink magenta brown lightcoral
 
     path.time-series-line {
         fill: none;
+        stroke-width: 2px;
     }
 
     @for $index from 1 through length($time-series-colors) {
