--- a/src/app/simulation/voltage-violation/VoltageViolation.scss
+++ b/src/app/simulation/voltage-violation/VoltageViolation.scss
@@ -1,7 +1,7 @@
 .voltage-violation {
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 5px;
     z-index: 15;
     display: flex;
     color: #fff;
@@ -10,20 +10,22 @@
     justify-content: center;
 }
 
+.voltage-violation__label,
+.voltage-violation__counts {
+    background-color: #8a6d6d;
+    box-shadow: 0 0 2px #8a6d6d;
+}
+
 .voltage-violation__label {
     padding: 5px 10px;
     padding-right: 15px;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
-    background-color: rgb(73, 69, 69);
-    box-shadow: 0 0 2px #555;
     transform: translateX(5px);
 }
 
 .voltage-violation__counts {
-    background-color: #494545;
     border-radius: 100%;
-    box-shadow: 0 0 2px #555;
     text-align: right;
     width: 45px;
     height: 45px;
