Add login screen with default authentication (No authentication backend)

--- a/src/app/shared/notification-banner/NotificationBanner.scss
+++ b/src/app/shared/notification-banner/NotificationBanner.scss
@@ -30,7 +30,7 @@
     animation-iteration-count: 1;
 
     .notification-banner__content {
-        height: 120px;
+        // height: 120px;
         box-shadow: 0 -2px 5px #555;
         background-color: rgba(0, 0, 0, 0.65);
     }
