--- a/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/TestConfigurationFormGroup.scss
+++ b/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/TestConfigurationFormGroup.scss
@@ -7,6 +7,8 @@
     .test-configuration__form {
         overflow: auto auto;
         width: 40%;
+        border-right: 2px solid rgba(0, 0, 0, 0.1);
+        margin-right: 5px;
     }
 }
 
