Show "Add", "Cancel" buttons when select components are multi select

--- a/src/app/shared/form/select/OptionList.scss
+++ b/src/app/shared/form/select/OptionList.scss
@@ -18,6 +18,9 @@
     padding: 15px 10px;
     padding-right: 25px;
     cursor: pointer;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     &:hover {
         background-color: #84811114;
