--- a/src/app/shared/form/select/OptionListFilter.scss
+++ b/src/app/shared/form/select/OptionListFilter.scss
@@ -6,7 +6,6 @@
     padding-left: 5px;
     margin: 0 10px;
     margin-top: 15px;
-    min-width: 200px;
     display: flex;
     box-sizing: border-box;
 }
@@ -15,4 +14,5 @@
     border: none;
     font-size: 0.9em;
     outline: none;
+    width: 100%;
 }
