--- a/src/app/shared/form/validation/validation-error-messages/ValidationErrorMessages.scss
+++ b/src/app/shared/form/validation/validation-error-messages/ValidationErrorMessages.scss
@@ -8,7 +8,7 @@
 }
 
 .validation-error-message {
-    font-size: 10px;
+    font-size: 0.8em;
     color: red;
     font-style: italic;
     list-style: none;
