--- a/src/app/shared/tooltip/Tooltip.scss
+++ b/src/app/shared/tooltip/Tooltip.scss
@@ -16,7 +16,7 @@
     z-index: 15;
     white-space: pre-wrap;
     font-family: 'Roboto', sans-serif;
-    font-size: 11px;
+    font-size: 0.7em;
     opacity: 0;
     visibility: hidden;
     color: #fff;
