--- a/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/CommOutageEventForm.scss
+++ b/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/CommOutageEventForm.scss
@@ -1,6 +1,6 @@
 .comm-outage-event-form__add-event {
-    margin: 10px;
-    margin-left: 20px;
+    transform: translate(1em, 2em);
+    margin-bottom: 3em;
 }
 
 .comm-outage-event-form__add-input,
