--- a/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/FaultEventForm.scss
+++ b/src/app/simulation/simulation-configuration/views/TestConfigurationFormGroup/FaultEventForm.scss
@@ -1,4 +1,4 @@
 .fault-event-form__add-event {
-    margin: 10px;
-    margin-left: 20px;
+    transform: translate(1em, 2em);
+    margin-bottom: 3em;
 }
