--- a/src/app/shared/form/input/Input.scss
+++ b/src/app/shared/form/input/Input.scss
@@ -11,6 +11,7 @@
     padding: 5px;
     box-sizing: border-box;
     transition: border-bottom-color 0.15s ease, color 0.1s ease;
+    font-size: 0.8em;
 }
 
 .input-field__ripple-bar {
