Bug fix: If the 2 endpoints of a measurement chart's y axis extent are equal, set the left endpoint to 0 so the y axis can render the tick marks properly

--- a/src/app/simulation/simulation-control/views/plot-model-creator/PlotModelCreator.scss
+++ b/src/app/simulation/simulation-control/views/plot-model-creator/PlotModelCreator.scss
@@ -22,10 +22,12 @@
 
     .form-control:nth-child(4) {
         margin-bottom: 0;
+        margin-left: 270px;
     }
 
     .form-control:nth-child(5) {
         margin-top: 5px;
+        margin-left: 270px;
     }
 }
 
