--- a/src/app/simulation/simulation-labels/SimulationLabel.scss
+++ b/src/app/simulation/simulation-labels/SimulationLabel.scss
@@ -1,5 +1,5 @@
 .simulation-label {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 -0.5px 1px rgba(0, 0, 0, 0.2);
