--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
     src: url(./assets/fonts/MaterialIcons-Regular.ttf);
 }
 
+html {
+    font-size: 16px;
+}
+
 body,
 main {
     width: 100vw;
