Make the response section in Logs data browser more responsive

--- a/src/app/data-browser/DataBrowser.scss
+++ b/src/app/data-browser/DataBrowser.scss
@@ -102,6 +102,7 @@ $app-bar-height: 60px;
     padding: 5px;
     white-space: pre;
     box-sizing: border-box;
+    position: relative;
 }
 
 .response {
