--- a/src/app/shared/form/textarea/TextArea.scss
+++ b/src/app/shared/form/textarea/TextArea.scss
@@ -2,19 +2,40 @@
     align-items: flex-start;
 }
 
-.textarea__input-box {
+.textarea__input-box-container {
+    position: relative;
     width: 600px;
-    border-radius: 3px;
-    padding: 5px;
     height: 150px;
     max-height: 150px;
+    vertical-align: top;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.textarea__input-box {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
+    border-radius: 3px;
     overflow-y: auto;
+    padding: 5px;
     white-space: pre;
     vertical-align: top;
     border: 2px solid #ccc;
-    display: inline-block;
     transition: border-color 0.1s ease;
     outline: none;
+}
+
+.textarea__input-box-resize-handle {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    width: 10px;
+    height: 10px;
+    border-right: 3px solid #999;
+    border-bottom: 3px solid #999;
+    cursor: nwse-resize;
 }
 
 .textarea__input-box:focus {
