- Recalculate text box's bounding box when the resize begins - Change tooltip text in service configuration tab

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ main {
     overflow: hidden;
 }
 
-body.resizing * {
+body.frozen * {
     pointer-events: none;
     -moz-user-select: none;
     -webkit-user-select: none;
