--- a/src/app/shared/tooltip/Tooltip.scss
+++ b/src/app/shared/tooltip/Tooltip.scss
@@ -8,7 +8,7 @@
     pointer-events: none;
 }
 
-.gridappsd-tooltip {
+.td-tooltip {
     position: absolute;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 -0.5px 1px rgba(0, 0, 0, 0.2);
     border-radius: 2px;
@@ -24,7 +24,7 @@
     max-width: 100vw;
 }
 
-.gridappsd-tooltip__arrow {
+.td-tooltip__arrow {
     overflow: hidden;
     position: absolute;
     width: 20px;
@@ -43,55 +43,47 @@
     }
 }
 
-.gridappsd-tooltip__content {
+.td-tooltip__content {
     line-height: 1.5em;
     padding: 10px;
 }
 
-.gridappsd-tooltip.top {
-    .gridappsd-tooltip__arrow {
-        transform: translateX(-50%);
-        top: 100%;
-        left: 50%;
+.td-tooltip.top .td-tooltip__arrow {
+    transform: translateX(-50%);
+    top: 100%;
+    left: 50%;
 
-        &::after {
-            transform: translateY(-18px) rotate(45deg);
-        }
+    &::after {
+        transform: translateY(-18px) rotate(45deg);
     }
 }
 
-.gridappsd-tooltip.right {
-    .gridappsd-tooltip__arrow {
-        transform: translateY(-55%) translateX(-20px);
-        top: 50%;
-        left: 0;
+.td-tooltip.right .td-tooltip__arrow {
+    transform: translateY(-55%) translateX(-20px);
+    top: 50%;
+    left: 0;
 
-        &::after {
-            transform: translateX(65%) rotate(45deg);
-        }
+    &::after {
+        transform: translateX(65%) rotate(45deg);
     }
 }
 
-.gridappsd-tooltip.bottom {
-    .gridappsd-tooltip__arrow {
-        transform: translateX(-50%);
-        top: -20px;
-        left: 50%;
+.td-tooltip.bottom .td-tooltip__arrow {
+    transform: translateX(-50%);
+    top: -20px;
+    left: 50%;
 
-        &::after {
-            transform: translateY(16px) rotate(45deg);
-        }
+    &::after {
+        transform: translateY(16px) rotate(45deg);
     }
 }
 
-.gridappsd-tooltip.left {
-    .gridappsd-tooltip__arrow {
-        transform: translateY(-51%);
-        top: 50%;
-        left: 100%;
+.td-tooltip.left .td-tooltip__arrow {
+    transform: translateY(-51%);
+    top: 50%;
+    left: 100%;
 
-        &::after {
-            transform: translateX(-85%) rotate(45deg);
-        }
+    &::after {
+        transform: translateX(-85%) rotate(45deg);
     }
 }
