--- a/src/app/simulation/simulation-configuration/views/service-configuration/ServiceConfiguration.scss
+++ b/src/app/simulation/simulation-configuration/views/service-configuration/ServiceConfiguration.scss
@@ -1,3 +1,9 @@
+.service-configuration {
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 100%;
+}
+
 .service-configuration__apply {
     margin-top: 1.5em;
     margin-left: 1.5em;
