--- a/src/app/shared/buttons/icon-button/IconButton.scss
+++ b/src/app/shared/buttons/icon-button/IconButton.scss
@@ -62,11 +62,11 @@
 }
 
 .rounded-icon-button--large {
-    width: 50px;
-    height: 50px;
+    width: 4vw;
+    height: 4vw;
 
     i {
-        font-size: 2.2em;
+        font-size: 2vw;
     }
 }
 
