--- a/src/app/simulation/alarms/views/new-alarm-notification/NewAlarmNotification.scss
+++ b/src/app/simulation/alarms/views/new-alarm-notification/NewAlarmNotification.scss
@@ -13,40 +13,42 @@
 }
 
 .new-alarm-notification {
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    transition: visibility 0.25s ease, opacity 0.25s ease, transform 0.25s ease;
-    visibility: hidden;
-    opacity: 0;
-    transform: translateX(50px);
-
-    &.show {
-        visibility: visible;
-        opacity: 1;
-        transform: translateX(0px);
-    }
-
-    &.hide {
-        visibility: hidden;
-        opacity: 0;
-        transform: translateX(50px);
-    }
+    position: relative;
+    pointer-events: all;
+    cursor: pointer;
 }
 
 .new-alarm-notification__counts {
     position: absolute;
-    top: 0px;
+    top: 0;
+    left: 75%;
     font-size: 1vw;
     font-weight: bold;
-    left: 50%;
-    border-radius: 1000px;
     color: #fff;
     border-radius: 1000px;
-    background: #bebbb6;
-    padding: 0.25vw;
+    background-color: #a98c8c;
+    padding: 5px;
     box-shadow: 0 0 5px #555;
     min-width: 1vw;
     min-height: 1vw;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: visibility 0.25s ease, opacity 0.25s ease, transform 0.25s ease;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0, 0);
+    transform-origin: 50% 50%;
+
+    &.visible {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1, 1);
+    }
+
+    &.hidden {
+        visibility: hidden;
+        opacity: 0;
+        transform: scale(0, 0);
+    }
 }
