--- a/src/app/simulation/simulation-labels/SimulationLabel.scss
+++ b/src/app/simulation/simulation-labels/SimulationLabel.scss
@@ -12,9 +12,14 @@
     border: 1px solid #8e8e8e;
     max-width: 100vw;
 
+    th {
+        padding: 0;
+    }
+
     td {
         padding: 0 5px;
     }
+
 }
 
 .simulation-label__heading {
